--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,7 @@
 /assets/vendor/
 ###< symfony/asset-mapper ###
 /.env
+
+###> lexik/jwt-authentication-bundle ###
+/config/jwt/*.pem
+###< lexik/jwt-authentication-bundle ###
