--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -8,3 +8,5 @@ app.swagger_ui:
     path: /api/doc
     methods: GET
     defaults: { _controller: nelmio_api_doc.controller.swagger_ui }
+api_login_check:
+    path: /api/users/login_check
